<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_card_view"
    app:cardElevation="@dimen/elevation_card_view">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/characterLabelBarrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="right"
            app:constraint_referenced_ids="characterLabelContainer" />

        <LinearLayout
            android:id="@+id/characterLabelContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:divider="@drawable/divider_card_label"
            android:orientation="vertical"
            android:showDividers="middle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                style="@style/LabelStyle"
                android:text="@string/label_character_name" />

            <TextView
                style="@style/LabelStyle"
                android:text="@string/label_character_gender" />

            <TextView
                style="@style/LabelStyle"
                android:text="@string/label_character_birthyear" />

            <TextView
                style="@style/LabelStyle"
                android:text="@string/label_character_mass" />

            <TextView
                style="@style/LabelStyle"
                android:text="@string/label_character_height" />

            <TextView
                style="@style/LabelStyle"
                android:text="@string/label_character_skin" />

            <TextView
                style="@style/LabelStyle"
                android:text="@string/label_character_hair" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_character_label_side"
            android:divider="@drawable/divider_card_label"
            android:orientation="vertical"
            android:showDividers="middle"
            app:layout_constraintBottom_toBottomOf="@+id/characterLabelContainer"
            app:layout_constraintStart_toEndOf="@+id/characterLabelBarrier"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/characterDetailsName"
                style="@style/ValueStyle"
                tools:text="Luke Skywalker" />

            <TextView
                android:id="@+id/characterDetailsGender"
                style="@style/ValueStyle"
                tools:text="Male" />

            <TextView
                android:id="@+id/characterDetailsBirthYear"
                style="@style/ValueStyle"
                tools:text="16BYY" />

            <TextView
                android:id="@+id/characterDetailsMass"
                style="@style/ValueStyle"
                tools:text="62" />

            <TextView
                android:id="@+id/characterDetailsHeight"
                style="@style/ValueStyle"
                tools:text="180" />

            <TextView
                android:id="@+id/characterDetailsSkinColor"
                style="@style/ValueStyle"
                tools:text="Light" />


            <TextView
                android:id="@+id/characterDetailsHairColor"
                style="@style/ValueStyle"
                tools:text="Dark" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>