<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    app:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/characterLabelBarrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="right"
            app:constraint_referenced_ids="itemCharacterBirthYearLabel,itemCharacterGenderLabel,itemCharacterNameLabel"
            tools:layout_editor_absoluteX="78dp"
            tools:layout_editor_absoluteY="16dp" />

        <TextView
            android:id="@+id/itemCharacterNameLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/label_character_name"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/itemCharacterName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_character_label_side"
            app:layout_constraintBottom_toBottomOf="@+id/itemCharacterNameLabel"
            app:layout_constraintStart_toEndOf="@+id/characterLabelBarrier"
            app:layout_constraintTop_toTopOf="@+id/itemCharacterNameLabel"
            tools:text="Luke Skywalker" />

        <TextView
            android:id="@+id/itemCharacterGenderLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_character_label_top"
            android:text="@string/label_character_gender"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/itemCharacterNameLabel" />

        <TextView
            android:id="@+id/itemCharacterGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_character_label_side"
            app:layout_constraintBottom_toBottomOf="@+id/itemCharacterGenderLabel"
            app:layout_constraintStart_toEndOf="@+id/characterLabelBarrier"
            app:layout_constraintTop_toTopOf="@+id/itemCharacterGenderLabel"
            tools:text="Male" />

        <TextView
            android:id="@+id/itemCharacterBirthYearLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_character_label_top"
            android:text="@string/label_character_birthyear"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/itemCharacterGender" />

        <TextView
            android:id="@+id/itemCharacterBirthYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_character_label_side"
            app:layout_constraintBottom_toBottomOf="@+id/itemCharacterBirthYearLabel"
            app:layout_constraintStart_toEndOf="@+id/characterLabelBarrier"
            app:layout_constraintTop_toTopOf="@+id/itemCharacterBirthYearLabel"
            tools:text="16BYY" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
